# arig

./: Cargo.toml  README.md  arig.schema.json
.github/workflows/: ci.yml  publish.yml
src/: config.rs  dag.rs  main.rs  supervisor.rs
