[package]
name = "arig"
version = "0.1.0"
edition = "2024"
description = "Polyglot service orchestrator"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cienvita/arig"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Security",
] }
